refactor: 이름과 배팅 금액 매핑이 리스트 순서에 의존하지 않도록 맵 자료구조로 변경